Closed Bug 670093 Opened 14 years ago Closed 14 years ago

gfx/2d fails to compile on mingw

Categories

(Core :: Graphics, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla9

People

(Reporter: jacek, Assigned: jacek)

Details

(Whiteboard: [inbound])

Attachments

(1 file)

Attached patch fix v1.0Splinter Review
There are two problems: - Macros __in and __out are not supported by mingw, because they conflict with GCC-provided headers. They are mostly no-op anyways, so just removing them should be fine. - There are wrong cases in includes, which causes problems when cross compiling on case-sensitive OSes.
Attachment #544754 - Flags: review?
Attachment #544754 - Flags: review? → review?(bas.schouten)
Comment on attachment 544754 [details] [diff] [review] fix v1.0 The lower/uppercase is actually interesting, as on different SDKs they seem to be shipped with different casing.
It doesn't matter for Microsoft-provided SDKs. They work only on Windows, which is case-insensitive. Also they change quite often from version to version, so it's impossible to be compatible with them. mingw, however, always uses lower-cases.
Bas, ping
Comment on attachment 544754 [details] [diff] [review] fix v1.0 Review of attachment 544754 [details] [diff] [review]: ----------------------------------------------------------------- If MinGW always uses lowercases that's fine :). Sorry for the delay, I missed this bug. Just out of curiosity, now that Visual Studio Express is free, why would anyone -want- to build with MinGW?
Attachment #544754 - Flags: review?(bas.schouten) → review+
(In reply to Bas Schouten (:bas) from comment #4) Thanks for review. > Just out of curiosity, now that Visual Studio Express is free, why would > anyone -want- to build with MinGW? Well, there would be a few reasons like ability to cross compile from Linux or just free software ideology (it's possible to build Windows Firefox without running single line of closed source code). My main reason is that I'm working Wine (www.winehq.org) and we use Gecko for out MSHTML implementation. To make it a proper package, we need to be able to build Gecko on Linux.
(In reply to Jacek Caban from comment #5) > To make it a proper package, we need to be able to build Gecko on Linux. I meant Windows Gecko build here (built on Linux so that distros can package it correctly).
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla9
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: