Bug 670093 - gfx/2d fails to compile on mingw r=bas.schouten