gfx/2d/HelpersD2D.h
@@ -38,7 +38,7 @@
 #ifndef MOZILLA_GFX_HELPERSD2D_H_
 #define MOZILLA_GFX_HELPERSD2D_H_
 
-#include <D2D1.h>
+#include <d2d1.h>
 #include "2D.h"
 
 namespace mozilla {
